syntax = "proto3";
package common.protobuf;
import "Data.proto";

message SCItemData {
	ItemData item_data = 1;
}

message CSItemUse {
	int32 item_id = 1;
	int32 num = 2;
}
